--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,6 +4,8 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+
+<ion-content padding center text-center>
 <ion-header>
 
   <ion-navbar>
@@ -11,6 +13,19 @@
   </ion-navbar>
 
 </ion-header>
+
+<ion-content>
+  <ion-list>
+    <ion-item>
+      <ion-input aria-placeholder="Username">Username</ion-input>
+    </ion-item>  
+    <ion-item>
+        <ion-input aria-placeholder="Password" type="password">Password</ion-input>
+      </ion-item>  
+  </ion-list>
+
+  <button ion-button full>Login</button>
+</ion-content>
 
 
 <ion-content padding>
