--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -17,14 +17,15 @@
 <ion-content>
   <ion-list>
     <ion-item>
-      <ion-input aria-placeholder="Username">Username</ion-input>
+      <ion-input aria-placeholder="Username" [(ngModel)]="username">Username</ion-input>
     </ion-item>  
     <ion-item>
-        <ion-input aria-placeholder="Password" type="password">Password</ion-input>
+        <ion-input aria-placeholder="Password" type="password" [(ngModel)]="password">Password</ion-input>
       </ion-item>  
   </ion-list>
 
-  <button ion-button full>Login</button>
+  <button ion-button full (click)="login()">Login</button>
+  <button ion-button full (click)="register()">Register</button>
 </ion-content>
 
 
