--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,9 +7,6 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+    <ion-img width="80" height="180" src="home/ustEatPic"></ion-img>
   <button ion-button full (click)="goToLogin()">Login</button>
 </ion-content>
