--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,6 +7,6 @@
 </ion-header>
 
 <ion-content padding>
-    <ion-img width="80" height="180" src="home/ustEatPic"></ion-img>
-  <button ion-button full (click)="goToLogin()">Login</button>
+  <!-- <ion-img width="80" height="180" src="home/ustEatPic"></ion-img> -->
+  <button ion-button full (click)="goToLogin()">Enter</button>
 </ion-content>
